<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">
	<LinearLayout android:layout_width="fill_parent"
		android:id="@+id/linearLayout1" android:layout_height="wrap_content"
		android:orientation="horizontal">
		<TextView android:id="@+id/textView1" android:layout_width="wrap_content"
			android:layout_height="fill_parent" android:layout_weight="1"
			android:text="@string/sfont" style="@style/font_color_style"></TextView>
		<RadioGroup android:id="@+id/radioGroup1"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="1">
			<RadioButton android:layout_width="wrap_content"
				android:id="@+id/radio0" android:layout_height="wrap_content"
				android:checked="true" android:text="@string/sday"></RadioButton>
			<RadioButton android:layout_width="wrap_content"
				android:id="@+id/radio1" android:layout_height="wrap_content"
				android:text="@string/snight"></RadioButton>
			<RadioButton android:layout_width="wrap_content"
				android:id="@+id/radio2" android:layout_height="wrap_content"
				android:text="@string/scustom"></RadioButton>
		</RadioGroup>
	</LinearLayout>
	<View android:layout_width="wrap_content" android:layout_height="2dp"
		android:background="@drawable/title_rect_line"></View>
	<RadioGroup android:id="@+id/radioGroup2"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="horizontal" android:paddingLeft="5dp"
		android:paddingRight="5dp">
		<RadioButton android:layout_width="wrap_content"
			android:id="@+id/radio3" android:layout_height="wrap_content"
			android:checked="true" android:text="@string/sfont_color"></RadioButton>
		<RadioButton android:layout_width="wrap_content"
			android:id="@+id/radio4" android:layout_height="wrap_content"
			android:text="@string/sbackground_color"></RadioButton>
		<RadioButton android:layout_width="wrap_content"
			android:id="@+id/radio5" android:layout_height="wrap_content"
			android:text="@string/sbackground_select"></RadioButton>
		<Button android:text="@string/sreset" android:id="@+id/button1"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_marginLeft="5dp" android:minWidth="70dp"></Button>
	</RadioGroup>
	<TableLayout android:layout_width="fill_parent" android:id="@+id/tableLayout3"
		android:layout_height="wrap_content" android:paddingLeft="10dp"
		android:paddingRight="10dp">
		<TableRow>
			<TextView android:id="@+id/textView2" android:layout_width="100dp"
				android:layout_height="wrap_content" android:gravity="center_vertical"
				android:text="@string/sred"></TextView>
			<SeekBar android:layout_width="fill_parent" android:id="@+id/seekBar1"
				android:layout_height="wrap_content" android:layout_weight="1"></SeekBar>
		</TableRow>
		<TableRow>
			<TextView android:id="@+id/textView3" android:layout_width="100dp"
				android:layout_height="wrap_content" android:gravity="center_vertical"
				android:text="@string/sgreen"></TextView>
			<SeekBar android:layout_width="fill_parent" android:id="@+id/seekBar2"
				android:layout_height="wrap_content" android:layout_weight="1"></SeekBar>
		</TableRow>
		<TableRow>
			<TextView android:id="@+id/textView4" android:layout_width="100dp"
				android:layout_height="wrap_content" android:gravity="center_vertical"
				android:text="@string/sblue"></TextView>
			<SeekBar android:layout_width="fill_parent" android:id="@+id/seekBar3"
				android:layout_height="wrap_content" android:layout_weight="1"></SeekBar>
		</TableRow>
		<TableRow>
			<TextView android:id="@+id/textView5" android:layout_width="100dp"
				android:layout_height="wrap_content" android:gravity="center_vertical"
				android:text="@string/strans"></TextView>
			<SeekBar android:layout_width="fill_parent" android:id="@+id/seekBar4"
				android:layout_height="wrap_content" android:layout_weight="1"></SeekBar>
		</TableRow>
	</TableLayout>
	<View android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_weight="1"></View>
	<LinearLayout android:id="@+id/LinearLayout_button"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:gravity="center" style="@android:style/ButtonBar"
		android:orientation="horizontal">
		<Button android:focusable="false" android:id="@+id/positive"
			android:layout_weight="1" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/ok"></Button>
		<Button android:id="@+id/negative" android:focusable="false"
			android:layout_width="wrap_content" android:layout_weight="1"
			android:layout_height="wrap_content" android:text="@string/cancel"></Button>
	</LinearLayout>
</LinearLayout>
