<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">
	<LinearLayout android:id="@+id/linearLayout1"
		android:layout_height="wrap_content" android:layout_width="fill_parent"
		android:orientation="horizontal">
		<ImageView android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:src="@drawable/icon"
			android:id="@+id/imageView1" android:layout_marginLeft="15dp"></ImageView>
		<TextView android:id="@+id/textView1" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/app_name"
			style="@android:style/TextAppearance.Theme.Dialog"
			android:layout_gravity="center_vertical"></TextView>
	</LinearLayout>
	<TableLayout android:layout_height="wrap_content"
		android:id="@+id/tableLayout1" android:layout_width="fill_parent"
		android:paddingLeft="5dp">
		<TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView android:text="@string/version" android:id="@+id/textView2"
				android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
			<TextView android:id="@+id/textView3" android:layout_width="wrap_content"
				android:layout_height="wrap_content"></TextView>
		</TableRow>
		<TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView android:text="@string/mail" android:id="@+id/textView4"
				android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
			<TextView android:id="@+id/textView5" android:layout_width="wrap_content"
				android:layout_height="wrap_content"></TextView>
		</TableRow>
	</TableLayout>
	<View android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_weight="1"></View>
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:gravity="right"
		android:paddingRight="5dp">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/copyright" />
	</LinearLayout>
</LinearLayout>
