<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:background="@color/white" android:orientation="vertical">
	<ImageView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:background="@drawable/ebbinghaus"
		android:layout_alignParentTop="true" android:layout_centerHorizontal="true"
		android:id="@+id/ebbinghaus"></ImageView>
	<LinearLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_below="@id/ebbinghaus"
		android:layout_above="@+id/layout2" android:layout_centerHorizontal="true"
		android:orientation="vertical" android:gravity="center">
		<TextView android:layout_width="wrap_content" android:id="@+id/textView1"
			android:layout_height="wrap_content" android:text="@string/cur_leve"
			android:textColor="@color/blue"></TextView>
		<TextView android:layout_width="wrap_content" android:id="@+id/textView2"
			android:layout_height="wrap_content" android:text="@string/next_level"
			android:textColor="@color/orange"></TextView>
	</LinearLayout>
	<LinearLayout android:layout_width="fill_parent"
		android:layout_alignParentBottom="true" android:layout_height="80dp"
		android:gravity="center" android:id="@id/layout2">
		<Button android:id="@+id/w_button1" android:text="@string/begin"
			android:minWidth="80dp" android:layout_width="wrap_content"
			android:layout_height="wrap_content"></Button>
	</LinearLayout>
</RelativeLayout>
